image still is in right file, folder, correct path id, I have gone over every pice of this code. it is liek the ocntainer is overlapping the icon, or viceversa.. but everything is correct in html and css. I am so torn so just continueing on

--- a/Basic_style.css
+++ b/Basic_style.css
@@ -17,11 +17,10 @@ h1 {
 }
 
 .container.squares:nth-child(-n+4) p {
-    background-image: url("icons2.png");
     color: #fff;
     float: left;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     margin: 5px;
     border: 1px solid black;
     border-radius: 25%;
@@ -30,7 +29,7 @@ h1 {
 }
 
 /*Select all squares paragraphs in array*/
-.squares:nth-child(1) {
+.squares:nth-child(1) p {
     font-family: "Arial, Helvetica, sans-serif";
     font-size: 1.5em;
     font-weight: 900;
@@ -58,11 +57,11 @@ h1 {
 
 }
 .squares:nth-child(4) p {
+    background-image: url("icons2.png");
     font-family: "Arial, Helvetica, sans-serif";
     font-size: 1.5em;
     font-weight: 900;
     text-align: center;
     margin: 0;
     text-shadow: 2px 1px 4px rgba(0, 0, 0 , 0.8);
-
 }
